# Filters

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt
avg/: CMakeLists.txt  README.md
avg/inc/: MovingAverageFilter.hpp  RunningAverageFilter.hpp
avg/src/: MovingAverageFilter.cpp  RunningAverageFilter.cpp
avg/test/: CMakeLists.txt  CsvData.hpp  MovingAverageFilterTests.cpp  RunningAverageFilterTests.cpp  SonarAlt.csv  SonarAlt_movavg_out.csv  mat_to_csv.py
kalman/: CMakeLists.txt  README.md
kalman/inc/: SimpleKalmanFilter.hpp
kalman/src/: SimpleKalmanFilter.cpp
kalman/test/: CMakeLists.txt  SimpleKalmanFilterTests.cpp
lpf/: CMakeLists.txt  README.md
lpf/inc/: LowPassFilter.hpp
lpf/src/: LowPassFilter.cpp
lpf/test/: CMakeLists.txt  LowPassFilterTests.cpp
utils/: CMakeLists.txt  CsvData.cpp
utils/data/: Voltage.csv
utils/scripts/: compare_lpf_variants.py  gen_voltage.py  plot.py
